# nfl_commish

./: Makefile  README.md  TODO.md  pyproject.toml  schedule_example.py  tmp.py  week1.json
.github/workflows/: ci.yaml
nfl_commish/: admin.py  game.py  scheduling.py  settings.py  team_classifier.py  utils.py
scripts/: initialize_week_sheets.py  initialize_week_sheets.yaml  run.py
tests/: conftest.py  sample_test.py  test_game.py  test_utils.py
tests/assets/: events.json  scores.json
tests/large/: conftest.py  test_team_classifier.py
tests/small/: conftest.py  test_game.py
